src/test/ui/issue-36163.stderr
error[E0391]: cyclic dependency detected
  --> $DIR/issue-36163.rs:11:18
   |
LL | const A: isize = Foo::B as isize; //~ ERROR E0391
   |                  ^^^^^^^^^^^^^^^ cyclic reference
   |
note: the cycle begins when processing `Foo::B::{{initializer}}`...
  --> $DIR/issue-36163.rs:14:9
   |
LL |     B = A,
   |         ^
note: ...which then requires processing `A`...
  --> $DIR/issue-36163.rs:14:9
   |
LL |     B = A,
   |         ^
   = note: ...which then again requires processing `Foo::B::{{initializer}}`, completing the cycle.

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
